--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "myvue",
+  "name": "vue-admin-lite",
   "version": "1.0.0",
   "description": "none",
-  "author": "liqingyun",
+  "author": "liqingyun <liqingyun.chn@qq.com>",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -12,7 +12,14 @@
     "lint": "vue-cli-service lint --fix"
   },
   "dependencies": {
-    "vue-i18n": "^8.17.4"
+    "axios": "^0.19.2",
+    "element-ui": "^2.13.1",
+    "js-cookie": "^2.2.1",
+    "mock.js": "^0.2.0",
+    "vue": "^2.6.11",
+    "vue-i18n": "^8.17.4",
+    "vue-router": "^3.1.6",
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -28,7 +35,8 @@
     "less-loader": "^5.0.0",
     "postcss-import": "^12.0.1",
     "postcss-url": "^8.0.0",
-    "vue-template-compiler": "2.6.6"
+    "vue-template-compiler": "2.6.11",
+    "mockjs": "^1.0.1-beta3"
   },
   "engines": {
     "node": ">= 6.0.0",
