--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
     "lint": "vue-cli-service lint --fix"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "element-ui": "^2.13.1",
     "js-cookie": "^2.2.1",
-    "mock.js": "^0.2.0",
-    "vue": "^2.6.11",
+    "nprogress": "0.2.0",
+    "screenfull": "^5.0.2",
     "vue-i18n": "^8.17.4",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.3.0"
+    "vuex": "^3.3.0",
+    "path-to-regexp": "2.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
