--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nprogress": "0.2.0",
     "screenfull": "^5.0.2",
     "vue-i18n": "^8.17.4",
+    "vue": "2.6.11",
     "vuex": "^3.3.0",
     "path-to-regexp": "2.4.0"
   },
